# marsupial_simulator_ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: plugin_ugv.h
launch/: marsupial_experiment.launch.py  marsupial_manual_simulation.launch.py  marsupial_simulation.launch.py  marsupial_to_point.launch.py  ugv_control.launch.py  ugv_sim_controller.launch.py  ugv_sim_keyboard.launch.py  ugv_state_publisher.launch.py
models/rs_robot/: model.config  rs_robot.sdf  rs_robot_original.sdf  rs_robot_test_winch.sdf
models/rs_robot/config/: controllers.yaml
models/sjtu_drone/: model.config  sjtu_drone.sdf
models/teatro/: teatro.sdf
models/tether/: tether.sdf  tether.sdf.jinja  tether_lineal.sdf.jinja  tether_original.sdf
models/winch/: winch.sdf
optimized_path/: optimized_path_2022_2_27_213811.yaml  optimized_path_teatro_test.yaml  teatro_mission.yaml  test0.yaml  test1.yaml  test2.yaml  test3.yaml  test5.yaml
scripts/: attach_tether.py  get_bag_data.py  get_bag_data_theatre.py  jinja_gen.py  plot_bag_data.py  plot_bag_data_theatre.py  spawn_ugv.py  target_publisher.py  tether_comparison.py  trajectory_follower.py  uav_to_point.py  uav_trajectory_follower.py  ugv_control_controller.py  ugv_control_keyboard.py  ugv_theter_trajectory_follower.py  ugv_theter_trajectory_follower_old.py  ugv_to_point.py
simulation_data/: tether_data.csv  ugv_data_theatre.csv
src/: plugin_ugv.cpp  tether_position_publisher.cpp
urdf/: rs_robot.urdf  rs_robot_original.urdf  sjtu_drone.urdf
worlds/: stage_1.world  stage_2.world  stage_3.world  stage_4.world  stage_5.world  stage_6.world  stage_7.world  theatre.world
